# LibZMQUtils

./: .gitignore  .gitmodules  README.md  TODOs.txt
LibZMQUtils/: .gitignore  CMakeLists.txt  LibZMQUtilsConfig.cmake.in  linux_zmq_tutorial
LibZMQUtils/CMakeLibsConfig/: ConfigLibZMQUtils.cmake  FindLibZMQ.cmake  FindLibZMQUtils.cmake
LibZMQUtils/CMakeModules/: CMakeMacros.cmake  CMakeMacrosGlobals.cmake  CMakeMacrosInstall.cmake  CMakeMacrosLauncher.cmake  CMakeMacrosLibraries.cmake  CMakeMacrosProjects.cmake  CMakeMacrosUtils.cmake
LibZMQUtils/docs/doxy/: DoxyfileConfig
LibZMQUtils/docs/html/: _example_z_m_q_client_amelas_8cpp_source.html  _example_z_m_q_server_amelas_8cpp_source.html  amelas__controller_8h_source.html  amelas__server_8cpp_source.html  amelas__server_8h_source.html  annotated.html  annotated_dup.js  classamelas_1_1_amelas_controller-members.html  classamelas_1_1_amelas_controller.html  classamelas_1_1_amelas_server-members.html  classamelas_1_1_amelas_server.html  classes.html  classzmq_1_1context__t-members.html  classzmq_1_1context__t.html  classzmq_1_1detail_1_1socket__base-members.html  classzmq_1_1detail_1_1socket__base.html  classzmq_1_1error__t-members.html  classzmq_1_1error__t.html  classzmq_1_1message__t-members.html  classzmq_1_1message__t.html  classzmq_1_1message__t.js  classzmq_1_1monitor__t-members.html  classzmq_1_1monitor__t.html  classzmq_1_1socket__ref-members.html  classzmq_1_1socket__ref.html  classzmq_1_1socket__t-members.html  classzmq_1_1socket__t.html  classzmqutils_1_1_command_client_base-members.html  classzmqutils_1_1_command_client_base.html  classzmqutils_1_1_command_server_base-members.html  classzmqutils_1_1_command_server_base.html  classzmqutils_1_1_command_server_base.js  command__client_8cpp_source.html  command__client_8h.html  command__client_8h.js  command__client_8h_source.html  command__server_8cpp.html  command__server_8cpp_source.html  command__server_8h.html  command__server_8h.js  (+75 more)
LibZMQUtils/docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  (+9 more)
LibZMQUtils/examples/: CMakeLists.txt
LibZMQUtils/examples/CommandServerClient/ServerClientAmelas/: CMakeLists.txt
LibZMQUtils/examples/CommandServerClient_Amelas/: CMakeLists.txt  ExampleClientAmelas.cpp  ExampleServerAmelas.cpp
LibZMQUtils/examples/CommandServerClient_Amelas/AmelasClient/: amelas_client.cpp  amelas_client.h
LibZMQUtils/examples/CommandServerClient_Amelas/AmelasController/: amelas_controller.h  common.h
LibZMQUtils/examples/CommandServerClient_Amelas/AmelasControllerClient/: amelas_controller_client.cpp  amelas_controller_client.h
LibZMQUtils/examples/CommandServerClient_Amelas/AmelasControllerServer/: amelas_controller_server.cpp  amelas_controller_server.h  common.h
LibZMQUtils/examples/CommandServerClient_Amelas/AmelasServer/: amelas_server.cpp  amelas_server.h  common.h
LibZMQUtils/examples/CommandServerClient_Amelas/sources/: ExampleClientAmelas.cpp  ExampleServerAmelas.cpp
LibZMQUtils/examples/CommandServerClient_OldSFELDome/: CMakeLists.txt  ExampleClientOldSFELDome.cpp  ExampleServerOldSFELDome.cpp
LibZMQUtils/examples/CommandServerClient_Sdome/: CMakeLists.txt  ExampleClientSdome.cpp  ExampleServerSdome.cpp
LibZMQUtils/examples/CommandServerClient_Sdome/SdomeClient/: sdome_client.cpp  sdome_client.h
LibZMQUtils/examples/CommandServerClient_Sdome/SdomeController/: common.h  sdome_controller.h
LibZMQUtils/examples/CommandServerClient_Sdome/SdomeServer/: common.h  sdome_server.cpp  sdome_server.h
LibZMQUtils/examples/ExampleZMQClient/: CMakeLists.txt  ExampleZMQClient.cpp
LibZMQUtils/examples/ExampleZMQCommanServerAmelas/: CMakeLists.txt  ExampleZMQServerAmelas.cpp  amelas_example_common.h  amelas_example_server.cpp  amelas_example_server.h
LibZMQUtils/examples/ExampleZMQCommanServerAmelas/AmelasExampleController/: common.h  (+2 more)
LibZMQUtils/examples/ExampleZMQCommandClient/: CMakeLists.txt  ExampleZMQClient.cpp
LibZMQUtils/examples/ExampleZMQCommandClientAmelas/: CMakeLists.txt  ExampleZMQClientAmelas.cpp
LibZMQUtils/examples/ExampleZMQCommandServer/: CMakeLists.txt  ExampleZMQServer.cpp  drgg_example_server.cpp  drgg_example_server.h
LibZMQUtils/examples/ExampleZMQServer/: CMakeLists.txt  ExampleZMQServer.cpp  custom_command_server.h
LibZMQUtils/examples/LoggerPubSub/: CMakeLists.txt
LibZMQUtils/includes/LibZMQUtils/: CommandClient  CommandServer  Helpers  Subscriber  Utils  command_client.h  command_server.h  command_server.h.orig  common.h  libzmqutils_global.h  todos.txt  utils.h  zmq_context_handler.h
LibZMQUtils/sources/: command_client.cpp  command_server.cpp  common.cpp  utils.cpp  zmq_context_handler.cpp
LibZMQUtils/sources/CommandServerClient/: clbk_command_server_base.cpp  command_client.cpp  command_client_base.cpp  command_server.cpp  command_server_base.cpp  common.cpp
LibZMQUtils/sources/Global/: zmq_context_handler.cpp
LibZMQUtils/sources/InternalHelpers/: console_config.cpp  file_helpers.cpp  network_helpers.cpp  string_helpers.cpp
LibZMQUtils/sources/PublisherSubscriber/: clbk_subscriber_base.cpp  common.cpp  publisher_base.cpp  subscriber_base.cpp
LibZMQUtils/sources/Testing/: unit_test.cpp
LibZMQUtils/sources/Utilities/: binary_serializer.cpp  callback_handler.cpp  console_config.cpp  utils.cpp  uuid_generator.cpp
LibZMQUtils/testing/: CMakeLists.txt
LibZMQUtils/testing/PublisherSubscriber/: CMakeLists.txt  UnitTest_PublisherSubscriber.cpp
LibZMQUtils/testing/Utilities/: CMakeLists.txt  UnitTest_BinarySerializer.cpp  UnitTest_ConsoleConfig.cpp  UnitTest_PublisherSubscriber.cpp
(+129 files in other folders)
